--- a/pages/components/sliders/InfrastructureSlider/style.module.scss
+++ b/pages/components/sliders/InfrastructureSlider/style.module.scss
@@ -63,17 +63,21 @@
   overflow: visible;
   width: 330px;
   margin: 0 10px;
-}
 
-.card img {
-  height: 410px;
-  width: 100%;
-  object-fit: cover;
-  object-position: top;
-  transition: all 300ms;
-  bottom: 205px;
-  margin-bottom: 30px;
-  box-shadow: -14.444px 19.167px 27px 0px rgba(23, 23, 23, 0.05);
+
+  .imgWrapper {
+    position: relative;
+    height: 410px;
+    width: 100%;
+    transition: all 300ms;
+    margin-bottom: 30px;
+    box-shadow: -14.444px 19.167px 27px 0px rgba(23, 23, 23, 0.05);
+
+    .img {
+      object-fit: cover;
+      object-position: top;
+    }
+  }
 }
 
 .content {
@@ -81,16 +85,17 @@
   color: #171717;
   font-size: 14px;
   line-height: 1;
-  transition: all 200ms;
+  //transition: all 200ms;
   padding: 0 20px 20px;
 
   div.description {
     text-align: justify;
-    transition: all 200ms;
+    //transition: all 200ms;
     opacity: 0;
     max-height: 0;
     overflow: hidden;
     margin-bottom: 10px;
+
     p {
       font-size: 14px;
 
@@ -128,19 +133,6 @@
   display: inline-block;
 }
 
-.titleSmall {
-  font-size: 15px;
-  font-family: "Helvetica Neue Bold", sans-serif;
-  text-transform: none;
-
-  p {
-    text-align: justify;
-    font-weight: 400;
-    font-size: 14px;
-    margin-top: 5px;
-  }
-}
-
 .title + a {
   text-transform: none;
 }
@@ -156,18 +148,31 @@
 }
 
 
-
-
-
-
 .card.active {
-  box-shadow: -14.444px 19.167px 27px 0px rgba(23, 23, 23, 0.05);
+  //box-shadow: -14.444px 19.167px 27px 0px rgba(23, 23, 23, 0.05);
   width: 330px;
 
+  //.imgWrapper {
+  //  box-sizing: content-box;
+  //  margin-bottom: 200px;
+  //}
+
+
+
   .content {
-    padding: 0 20px 20px;
+    //padding: 0 20px 20px;
+    //z-index: 1;
+    //background-color: #fff;
+    position: absolute;
+    width: 140%;
+    left: 50%;
+    bottom: -110px;
+    padding: 32px;
+    transform: translateX(-50%);
     z-index: 1;
     background-color: #fff;
+    box-shadow: -14.444px 19.167px 27px 0px rgba(23, 23, 23, 0.05);
+
 
     div.description {
       line-height: 1.15;
@@ -210,17 +215,24 @@
 
     .content {
       padding: 0;
+      width: unset;
+      left: unset;
+      bottom: unset;
+      transform: unset;
       background: none;
+      position: relative;
+      box-shadow: none;
+      transition: all 200ms;
 
+      .description {
+        transition: all 200ms;
+      }
 
       .title {
         margin-bottom: 0;
       }
     }
 
-    &.squared {
-      height: calc(65vw * 1 + 80px);
-    }
   }
 
 }
