--- a/pages/components/sliders/InfrastructureSlider/style.module.scss
+++ b/pages/components/sliders/InfrastructureSlider/style.module.scss
@@ -2,6 +2,35 @@
   position: relative;
   width: 100%;
   overflow: hidden;
+
+  //slick slider restyle
+  :global(.slick-next:before,
+  .slick-prev:before) {
+    color: #000;
+  }
+
+  :global(.slick-list) {
+    overflow: visible;
+  }
+
+  :global(.slick-track) {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: 481px) {
+    :global(.slick-slider) {
+      height: unset;
+      padding-bottom: 40px;
+    }
+  }
+  @media screen and (max-width: 1200px) {
+    :global(.slick-slider) {
+      height: unset
+    }
+  }
+
 }
 
 .text {
@@ -274,13 +303,6 @@
     margin-bottom: 15px;
   }
 }
-
-
-
-
-
-
-
 
 
 
