--- a/pages/components/Header/Header.module.scss
+++ b/pages/components/Header/Header.module.scss
@@ -27,7 +27,7 @@
 .content {
   color: #333333;
   font-size: 20px;
-  height: 100px;
+  height: 120px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -44,17 +44,27 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  border-radius: 50%;
+  background-color: #fff;
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
 }
 
 .logo img {
-  width: 250px;
+  width: 150px;
+  position: relative;
+  top:15px;
 }
 
 .leftBlock {
   display: flex;
   width: fit-content;
   width: -webkit-fill-available;
-  padding-left: 30px;
+  padding-left: 25px;
+  z-index: 100;
 }
 
 .rightBlock {
@@ -72,6 +82,18 @@
   align-items: flex-start;
   font-size: 17px;
   margin-right: 6%;
+
+  .location {
+    white-space: nowrap;
+    font-size: 12px;
+    position: absolute;
+    bottom: -12px;
+    left: 55px;
+    font-family: "Proxima Nova Ligth", sans-serif;
+  }
+  .telephone{
+    font-family: "Proxima Nova Semibold", sans-serif !important;
+  }
 }
 
 .link.number {
@@ -88,7 +110,7 @@
 
 .link div {
   white-space: nowrap;
-  font-family: "Geometria Medium", sans-serif !important;
+  font-family: "Helvetica Neue Roman", sans-serif !important;
 }
 
 .contacts {
@@ -100,7 +122,7 @@
 }
 
 .contacts div {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .contacts a {
@@ -166,9 +188,15 @@
     height: 55px;
   }
 
+  .logo {
+    height: unset;
+    width: unset;
+  }
+
   .logo img {
-    width: 190px;
+    width: 100px;
     transition: all 400ms;
+    position: unset;
   }
 
   .content.minified .logo img {
@@ -183,18 +211,18 @@
 .button {
   font-size: 20px;
   color: #fff;
-  background-color: #c62a26;
+  background-color: #00af98;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 15px 20px;
   white-space: nowrap;
-  font-family: "Geometria Medium", sans-serif;
+  font-family: "Proxima Nova Semibold", sans-serif;
   transition: all 300ms;
   cursor: pointer;
 
   &:hover {
-    background-color: #b72d29;
+    background-color: #019e88;
   }
 
   @media (max-width: 1200px) {
