--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -9,7 +9,7 @@
     font-display: swap;
 }
 @font-face {
-    font-family: 'Proxima Nova Ligth';
+    font-family: 'Proxima Nova Light';
     src: url('fonts/proxima-nova-light.ttf');
     font-display: swap;
 }
