--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,8 +2,6 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -16,7 +14,7 @@ a {
 }
 
 * {
-  font-family: "Helvetica Neue Light", Arial, sans-serif;
+  font-family: "Proxima Nova Light", Arial, sans-serif;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
