--- a/pages/components/sliders/InfrastructureSlider/style.module.scss
+++ b/pages/components/sliders/InfrastructureSlider/style.module.scss
@@ -132,13 +132,6 @@
         font-size: 14px;
       }
 
-      a {
-        font-family: "Helvetica Neue Medium", sans-serif;
-        font-size: 14px;
-        color: #d45a2f;
-        display: block;
-        margin: 6px 0;
-      }
     }
   }
 }
@@ -155,7 +148,7 @@
   width: fit-content;
   position: relative;
   text-transform: uppercase;
-  font-family: "Helvetica Neue Black", sans-serif;
+  font-family: "Proxima Nova Black", sans-serif;
   font-size: 20px;
   margin-bottom: 8px;
   margin-top: 5px;
@@ -182,7 +175,7 @@
 
   .content {
     position: absolute;
-    width: 140%;
+    width: 130%;
     left: 50%;
     bottom: -110px;
     padding: 32px;
