--- a/pages/components/HeadlineCenter/style.module.scss
+++ b/pages/components/HeadlineCenter/style.module.scss
@@ -2,7 +2,7 @@ h2.headlineCenter {
   text-transform: uppercase;
   text-align: center;
   font-size: 34px;
-  font-family: "Helvetica Neue Light", sans-serif;
+  font-family: "Proxima Nova Black", sans-serif;
   margin: 0 auto;
   margin-bottom: 70px;
   max-width: 95%;
