--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -59,7 +59,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 b, strong {
-  font-family: "Helvetica Neue Bold", sans-serif;
+  font-family: "Proxima Nova Bold", sans-serif;
 }
 
 a, a:visited {
@@ -134,7 +134,7 @@ section.section.last {
 .slick-dots li button:before {
   font-size: 56px;
   content: '-';
-  font-family: 'Helvetica Neue Light', sans-serif;
+  font-family: 'Proxima Nova Light', sans-serif;
 }
 
 //FORM start
@@ -240,7 +240,7 @@ select {
       .checkboxText {
         width:fit-content;
         font-size: 10px !important;
-        font-family: "Helvetica Neue Light", sans-serif !important;
+        font-family: "Proxima Nova Light", sans-serif !important;
         align-self: center;
         justify-self: flex-end;
         text-align: left !important;
