--- a/pages/components/HomePageBanner/HomePageBanner.module.scss
+++ b/pages/components/HomePageBanner/HomePageBanner.module.scss
@@ -68,6 +68,19 @@
     }
   }
 
+  .moduleBlock {
+    background-color: #fff;
+    position: absolute;
+    bottom: 130px;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 80vw;
+    width: 100%;
+    max-height: 100px;
+    height: 100%;
+    border-radius: 5px;
+  }
+
   .animatedMouse {
     position: absolute;
     bottom: 100px;
