--- a/pages/components/sliders/OffersSlider/OffersSliderItem/style.module.scss
+++ b/pages/components/sliders/OffersSlider/OffersSliderItem/style.module.scss
@@ -11,11 +11,30 @@
   transition: all 300ms ease-out;
   overflow: visible;
 
+  &:before {
+    position: absolute;
+    content: '';
+    background: #007261;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 20px;
+    opacity: 0;
+    z-index: 100;
+    border-radius: 5px 5px 0 0;
+    transition: all 500ms;
+  }
+
   &.lifted {
     position: relative;
     margin-top: -90px;
     height: 421px;
     transition: all 500ms;
+
+    &:before {
+      opacity: 1;
+    }
+
     &.noLink {
       margin-top: -60px;
       height: 402px;
@@ -103,7 +122,7 @@
 
 .title {
   text-transform: uppercase;
-  font-family: "Helvetica Neue Black", sans-serif;
+  font-family: "Proxima Nova Black", sans-serif;
   font-size: 18.6px;
   margin-bottom: 8px;
   margin-top: 5px;
@@ -112,11 +131,12 @@
 
 .title + div {
   text-transform: none;
+  font-family: "Proxima Nova Regular", sans-serif;
 }
 
 .subtitle {
   text-transform: uppercase;
-  font-family: "Helvetica Neue Roman", sans-serif;
+  font-family: "Proxima Nova Regular", sans-serif;
   font-size: 12.3px;
   margin-bottom: 5px;
   margin-top: 5px;
@@ -124,7 +144,7 @@
 
 .subtitle:after {
   display: block;
-  background-color: #ff6c39;
+  background-color: #007261;
   content: "";
   width: 15px;
   height: 4px;
