structure refactoring and renamings

--- a/pages/components/sliders/InfrastructureSlider/style.module.scss
+++ b/pages/components/sliders/InfrastructureSlider/style.module.scss
@@ -102,7 +102,7 @@
     margin-bottom: 30px;
     box-shadow: -14.444px 19.167px 27px 0px rgba(23, 23, 23, 0.05);
 
-    .img {
+    img {
       object-fit: cover;
       object-position: top;
     }
