--- a/pages/components/sliders/RoomsSlider/RoomsSliderItem/style.module.scss
+++ b/pages/components/sliders/RoomsSlider/RoomsSliderItem/style.module.scss
@@ -31,6 +31,13 @@ $imgWidth: 390px;
   position: relative;
 }
 
+.additionalInfo {
+  font-family: "Proxima Nova Regular";
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  color: #cbcbcb;
+}
+
 .title {
 
   font-size: 12px;
@@ -51,7 +58,8 @@ $imgWidth: 390px;
     display: block;
     text-transform: none;
     margin-top: 2px;
-    font-size: 30px;
+    font-size: 28px;
+    line-height: 1;
     font-family: 'Proxima Nova Black', sans-serif;
   }
 
@@ -67,6 +75,7 @@ $imgWidth: 390px;
   color: #b9b9b9;
   bottom: 60px;
   left: $imgWidth + 40px;
+
   span {
     font-size: 20px;
   }
@@ -83,6 +92,10 @@ $imgWidth: 390px;
     box-shadow: -14.444px 19.167px 27px 0px rgba(23, 23, 23, 0.14);
   }
 
+  .additionalInfo {
+    margin-bottom: 5px;
+  }
+
   .img {
     height: 50%;
     width: 100%;
@@ -95,7 +108,8 @@ $imgWidth: 390px;
 
   .title {
     font-size: 11px;
-    margin-bottom: 12px;
+    margin-bottom: 10px;
+
     span {
       font-size: 20px;
     }
@@ -107,24 +121,20 @@ $imgWidth: 390px;
   }
 }
 
-//@media screen and (max-width: 425px) {
-//  .content {
-//    transform: scale(0.8);
-//  }
-//}
-//
 @media screen and (max-width: 375px) {
   .text {
     font-size: 12px;
   }
 }
-//
-//@media screen and (max-width: 320px) {
-//  .content {
-//    transform: scale(0.6);
-//  }
-//}
-//
+
+@media screen and (max-width: 345px) {
+  .img {
+    height: 43%;
+  }
+  .card {
+    height: calc(65vw * 1.5);
+  }
+}
 
 
 
