--- a/pages/components/sliders/InfrastructureSlider/style.module.scss
+++ b/pages/components/sliders/InfrastructureSlider/style.module.scss
@@ -101,6 +101,8 @@
     transition: all 300ms;
     margin-bottom: 30px;
     box-shadow: -14.444px 19.167px 27px 0px rgba(23, 23, 23, 0.05);
+    border-radius: 5px;
+    overflow: hidden;
 
     img {
       object-fit: cover;
