--- a/pages/components/HomePageBanner/HomePageBanner.module.scss
+++ b/pages/components/HomePageBanner/HomePageBanner.module.scss
@@ -74,7 +74,7 @@
     bottom: 130px;
     left: 50%;
     transform: translateX(-50%);
-    max-width: 80vw;
+    max-width: 70vw;
     width: 100%;
     max-height: 100px;
     height: 100%;
@@ -86,5 +86,9 @@
     bottom: 100px;
     left: 50%;
     transform: translateX(-17.5px);
+
+    @media screen and (max-width: 992px) {
+      display: none;
+    }
   }
 }
