--- a/pages/components/Footer/Footer.module.scss
+++ b/pages/components/Footer/Footer.module.scss
@@ -15,7 +15,8 @@
     }
 
     .contactBlock {
-      width: 500px;
+      max-width: 500px;
+      width: 100%;
       height: 300px;
       background-color: #fff;
       position: absolute;
@@ -34,14 +35,17 @@
         font-size: 35px;
       }
 
-      .text p {
-        margin: 15px 0;
-        font-family: "Proxima Nova Regular", sans-serif;
-        display: flex;
-        align-items: center;
-
-        img {
-          margin-right: 10px;
+      .contacts {
+        .item {
+          display: flex;
+          align-items: center;
+          margin: 0 0 15px;
+          p {
+            margin-left: 10px;
+            font-family: "Proxima Nova Regular", sans-serif;
+            display: flex;
+            align-items: center;
+          }
         }
       }
 
@@ -50,7 +54,22 @@
 
         .icon {
           margin: 0 20px 0 0;
+          position: relative;
+          max-width: 45px;
+          width: 100%;
+          height: 45px;
+          max-height: 45px;
         }
+      }
+    }
+
+    @media screen and (max-width: 992px) {
+      .contactBlock {
+        position: unset;
+        margin: 0 auto;
+      }
+      .mapWrapper {
+        margin: 0;
       }
     }
   }
