--- a/components/ResortVacationPageBanner/style.module.scss
+++ b/components/ResortVacationPageBanner/style.module.scss
@@ -32,7 +32,7 @@
       z-index: 100;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
 
       .stars {
         width: 90px;
