add resort vacation banner

--- a/components/ResortVacationPageBanner/style.module.scss
+++ b/components/ResortVacationPageBanner/style.module.scss
@@ -1,16 +1,19 @@
+
 .wrapper {
+  margin-top: 100px;
+  height: calc(100vh - 100px);
   position: relative;
-  height: 100vh;
   max-height: 1000px;
   width: 100%;
 
   .banner {
     position: absolute;
-    top:0;
-    left:50%;
+    top: 0;
+    left: 50%;
     transform: translate(-50%);
     height: 100%;
     width: 100%;
+    z-index: -1;
 
     img {
       object-fit: cover;
@@ -24,11 +27,11 @@
     padding: 0 20px;
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     position: relative;
 
-    .textBlock {
+    .heading {
       z-index: 100;
       display: flex;
       flex-direction: column;
@@ -45,37 +48,67 @@
       }
 
       .text {
-        font-size: 30px;
+        font-size: 32px;
         font-family: "Proxima Nova Semibold", sans-serif;
+        margin-bottom: 5px;
       }
 
       .title {
-        font-size: 100px;
+        font-size: 80px;
         font-family: "Proxima Nova Black", sans-serif;
         text-transform: uppercase;
-        line-height: 1;
+        line-height: 0.95;
+        margin-bottom: 10px;
+
+        span {
+          font-size: 115px;
+          font-family: "Proxima Nova Black", sans-serif;
+          text-transform: uppercase;
+          display: block;
+        }
       }
 
       .subtitle {
-        font-size: 30px;
+        font-size: 28px;
+        text-transform: uppercase;
         font-family: "Proxima Nova Regular", sans-serif;
+        margin-bottom: 12px;
       }
 
-      @media screen and (max-width: 550px){
-        align-items: flex-start;
+      @media (max-width: 560px) {
+
+        .title {
+          font-size: 13vw;
+
+          span {
+            font-size: 19vw;
+          }
+        }
+
       }
     }
 
-    .circlesBlock {
-      position: absolute;
-      left: 50%;
-      top:24%;
-      transform: translate(-50%);
-      z-index: 1;
-
-      @media screen and (max-width: 700px){
-        display: none;
+    .descriptionWrapper {
+      .toggleDescriptionBtn {
+        cursor: pointer;
+        margin-bottom: 20px;
+        font-size: 18px;
       }
+
+      .descriptionBlock {
+        position: absolute;
+        visibility: hidden;
+        box-shadow: 0px 4px 27px 0px rgba(29, 29, 29, 0.52);
+        background-color: rgb(245, 245, 245);
+        padding: 40px;
+        box-sizing: border-box;
+        max-width: 50%;
+        &.active {
+          visibility: visible;
+        }
+
+      }
+
     }
   }
 
@@ -102,5 +135,10 @@
     @media screen and (max-width: 992px) {
       display: none;
     }
+  }
+
+  @media (max-width: 1200px) {
+    margin-top: 70px;
+    height: calc(100vh - 70px);
   }
 }
