--- a/components/ResortVacationPageBanner/style.module.scss
+++ b/components/ResortVacationPageBanner/style.module.scss
@@ -109,7 +109,8 @@
         background-color: rgb(245, 245, 245);
         padding: 40px;
         box-sizing: border-box;
-        max-width: 50%;
+        max-width: 500px;
+        margin-right: 20px;
         &.active {
           visibility: visible;
         }
