--- a/components/sliders/AdvantagesSlider/style.module.scss
+++ b/components/sliders/AdvantagesSlider/style.module.scss
@@ -35,7 +35,7 @@
 
       .sliderItemWrapper {
         box-sizing: border-box;
-        display: flex;
+        display: flex !important;
         flex-direction: column;
         position: relative;
         align-items: center;
