--- a/components/sliders/AdvantagesSlider/style.module.scss
+++ b/components/sliders/AdvantagesSlider/style.module.scss
@@ -12,19 +12,6 @@
     overflow: visible;
     padding-bottom: 95px;
 
-    &:before {
-      content: '';
-      //background: no-repeat url(../../../img/home-page/football.png);
-      width: 160px;
-      height: 160px;
-      background-size: contain;
-      position: absolute;
-      right: 90px;
-      top: -80px;
-      z-index: 1;
-      @media (max-width: 768px) {display: none}
-    }
-
     .sliderWrapper {
       max-width: 1200px;
       margin: -40px auto 0;
@@ -42,7 +29,7 @@
         justify-content: center;
         width: 280px;
         margin: 40px auto;
-        padding: 10px;
+        padding: 0 0 0 20px;
 
         @media (max-width: 1000px) {
           margin-left: 20px;
@@ -56,14 +43,14 @@
         }
 
         h5 {
-          font-family: "Geometria Bold", sans-serif;
+          font-family: "Proxima Nova Black", sans-serif;
           font-size: 20px;
           margin-bottom: 15px;
           text-align: center;
         }
 
         p {
-          font-family: "Geometria Light", sans-serif;
+          font-family: "Proxima Nova Regular", sans-serif;
           line-height: 1.2;
           text-align: center;
         }
