finish services slider (needs content)

--- a/components/Header/Menu/Menu.module.scss
+++ b/components/Header/Menu/Menu.module.scss
@@ -60,7 +60,7 @@
           position: absolute;
           width: 15px;
           height: 3px;
-          background-color: #ff6c39;
+          background-color: #007261;
           left: 0;
           top: 0px;
         }
