--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -95,7 +95,7 @@
     font-size: 12px;
     position: absolute;
     bottom: -12px;
-    left: 55px;
+    right: 0;
     font-family: "Proxima Nova Ligth", sans-serif;
   }
   .telephone{
