--- a/components/HomePageBanner/style.module.scss
+++ b/components/HomePageBanner/style.module.scss
@@ -11,10 +11,10 @@
     transform: translate(-50%);
     height: 100%;
     width: 100%;
-    margin-top: 25px;
 
     img {
       object-fit: cover;
+      object-position: center 29px;
     }
   }
 
