--- a/components/sliders/RoomsSlider/RoomsSliderItem/style.module.scss
+++ b/components/sliders/RoomsSlider/RoomsSliderItem/style.module.scss
@@ -18,8 +18,8 @@ $imgWidth: 390px;
   position: relative;
   width: $imgWidth;
   height: 100%;
-
   img {
+    height: 100%;
     object-fit: cover;
   }
 }
