remove unused imports

--- a/components/shared/Header/Menu/Menu.module.scss
+++ b/components/shared/Header/Menu/Menu.module.scss
@@ -1,4 +1,3 @@
-
 .menuWrapper {
   display: flex;
   flex-direction: column;
@@ -51,7 +50,7 @@
       .callUs {
         position: relative;
         padding-top: 12px;
-        font-family: "Geometria", sans-serif;
+        font-family: "Proxima Nova Semibold", sans-serif;
         font-size: 22px;
         //margin-top: -12px;
         margin-bottom: 15px;
