--- a/components/sliders/RoomsSlider/RoomsSliderItem/style.module.scss
+++ b/components/sliders/RoomsSlider/RoomsSliderItem/style.module.scss
@@ -18,6 +18,7 @@ $imgWidth: 390px;
   position: relative;
   width: $imgWidth;
   height: 100%;
+  display: block !important;
   img {
     height: 100%;
     object-fit: cover;
@@ -99,6 +100,9 @@ $imgWidth: 390px;
   .img {
     height: 50%;
     width: 100%;
+    img {
+      height: 100%;
+    }
   }
 
   .content {
