refactor state to mobile first

--- a/components/sliders/RoomsSlider/RoomsSliderItem/style.module.scss
+++ b/components/sliders/RoomsSlider/RoomsSliderItem/style.module.scss
@@ -33,7 +33,7 @@ $imgWidth: 390px;
 }
 
 .additionalInfo {
-  font-family: "Proxima Nova Regular";
+  font-family: "Proxima Nova Regular", sans-serif;
   text-transform: uppercase;
   margin-bottom: 10px;
   color: #cbcbcb;
