--- a/components/shared/DescriptionRoomBlock/style.module.scss
+++ b/components/shared/DescriptionRoomBlock/style.module.scss
@@ -9,50 +9,93 @@
     width: 100%;
     margin: 0 auto;
 
+    .textDesc {
+      margin: 30px 0;
+      text-align: justify;
+      font-family: "Proxima Nova Light", sans-serif;
+      font-size: 16px;
+      box-sizing: border-box;
+      padding: 0 15px;
+
+      b {
+        font-family: "Proxima Nova Black", sans-serif;
+        font-size: inherit;
+      }
+    }
+
+    .button {
+      font-size: 20px;
+      color: #fff;
+      background-color: #00af98;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 15px 20px;
+      white-space: nowrap;
+      font-family: "Proxima Nova Semibold", sans-serif;
+      transition: all 300ms;
+      cursor: pointer;
+      max-width: 200px;
+      width: 100%;
+      margin: 0 auto;
+
+      &:hover {
+        background-color: #019e88;
+      }
+    }
+
     .sliderWrapper {
       max-width: 940px;
       margin: 0 auto;
-    }
 
-    .iconWrapper {
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 0;
-
-      img {
-        width: 55px;
-        filter: brightness(0);
-        margin-bottom: 20px;
+      :global(.slick-dots li) {
+        margin: 0
       }
 
-      p {
-        font-family: "Helvetica Neue Roman", sans-serif;
-        text-align: center;
+      :global(.slick-dots) {
+        bottom: -35px;
       }
 
-      @media (max-width: 1000px) {
-        flex-direction: row;
-        max-width: 250px;
-        width: fit-content;
-        padding: 0 20px;
+      .iconWrapper {
+        box-sizing: border-box;
+        display: flex !important;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
 
-        img {
-          margin-bottom: 0;
-          margin-right: 10px;
-          height: 55px;
-          width: unset;
+        .icon {
+          width: 55px;
+          margin: 0 30px 0 0;
         }
 
-        p {
-          text-align: left;
+        .text {
+          font-family: "Proxima Nova Regular", sans-serif;
+          text-align: center;
+        }
+
+        @media (max-width: 1000px) {
+          flex-direction: row;
+          max-width: 250px;
+          width: fit-content;
+          padding: 0 20px;
+
+          .icon {
+            margin-bottom: 0;
+            margin-right: 10px;
+            height: 55px;
+            width: unset;
+          }
+
+          .text {
+            text-align: left;
+          }
         }
       }
 
+      @media screen and (max-width: 768px) {
+        padding-bottom: 25px;
+      }
     }
-
-
   }
 
   @media (max-width: 1000px) {
