--- a/components/sliders/OffersSlider/OffersSliderItem/style.module.scss
+++ b/components/sliders/OffersSlider/OffersSliderItem/style.module.scss
@@ -134,6 +134,8 @@
 
 .title + div {
   text-transform: none;
+  font-size: 13px;
+  color: #868686;
   font-family: "Proxima Nova Regular", sans-serif;
 }
 
