--- a/components/sliders/InfrastructureSlider/InfrastructureSliderItem/style.module.scss
+++ b/components/sliders/InfrastructureSlider/InfrastructureSliderItem/style.module.scss
@@ -91,8 +91,8 @@
     position: absolute;
     width: 130%;
     left: 50%;
-    bottom: -110px;
-    padding: 32px;
+    bottom: -90px;
+    padding: 32px 32px 20px;
     transform: translateX(-50%);
     z-index: 1;
     background-color: #fff;
