fullfil standard and 2 rooms lux room

--- a/components/shared/DescriptionRoomBlock/style.module.scss
+++ b/components/shared/DescriptionRoomBlock/style.module.scss
@@ -9,18 +9,21 @@
     width: 100%;
     margin: 0 auto;
 
-    .textDesc {
-      margin: 30px 0;
-      text-align: justify;
-      font-family: "Proxima Nova Light", sans-serif;
-      font-size: 16px;
-      box-sizing: border-box;
-      padding: 0 15px;
+    .description {
+      p {
+        margin: 30px 0;
+        text-align: justify;
+        font-family: "Proxima Nova Light", sans-serif;
+        font-size: 16px;
+        box-sizing: border-box;
+        padding: 0 15px;
 
-      b {
-        font-family: "Proxima Nova Black", sans-serif;
-        font-size: inherit;
+        b {
+          font-family: "Proxima Nova Black", sans-serif;
+          font-size: inherit;
+        }
       }
+
     }
 
     .button {
