--- a/components/pageBanners/SingleRoomPageBanner/style.module.scss
+++ b/components/pageBanners/SingleRoomPageBanner/style.module.scss
@@ -83,6 +83,7 @@
       top:24%;
       transform: translate(-50%);
       z-index: 1;
+      opacity: 0.4;
 
       @media screen and (max-width: 700px){
         display: none;
