--- a/components/shared/DescriptionRoomBlock/style.module.scss
+++ b/components/shared/DescriptionRoomBlock/style.module.scss
@@ -22,6 +22,12 @@
           font-family: "Proxima Nova Black", sans-serif;
           font-size: inherit;
         }
+
+        @media (max-width: 500px) {
+          &:last-of-type {
+            margin: 30px 0 0;
+          }
+        }
       }
 
     }
@@ -103,6 +109,10 @@
 
   @media (max-width: 1000px) {
     padding-bottom: 20px;
+  }
+
+  @media (max-width: 500px) {
+    padding-bottom: 0;
   }
 }
 
