fix header && footer && add infrastructure page

--- a/components/sliders/AdvantagesSlider/style.module.scss
+++ b/components/sliders/AdvantagesSlider/style.module.scss
@@ -52,7 +52,7 @@
         h5 {
           font-family: "Proxima Nova Black", sans-serif;
           font-size: 20px;
-          margin-bottom: 15px;
+          margin: 7px 0;
           text-align: center;
         }
 
