--- a/components/pageBanners/HomePageBanner/style.module.scss
+++ b/components/pageBanners/HomePageBanner/style.module.scss
@@ -69,7 +69,7 @@
           font-size: 24px;
         }
         .title {
-          font-size: 56px;
+          font-size: 17vw;
         }
       }
     }
