--- a/components/pageBanners/SingleRoomPageBanner/style.module.scss
+++ b/components/pageBanners/SingleRoomPageBanner/style.module.scss
@@ -72,7 +72,7 @@
           font-size: 24px;
         }
         .title {
-          font-size: 39px;
+          font-size: 13vw;
         }
       }
     }
