--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -255,7 +255,7 @@ select {
       height: 1em;
       flex-shrink: 0;
       flex-grow: 0;
-      border: 1px solid #ff6c39;
+      border: 1px solid #00af98;
       border-radius: 0.25em;
       margin-right: 0.5em;
       background-repeat: no-repeat;
@@ -264,18 +264,18 @@ select {
     }
 
     &:checked + label::before {
-      border-color: #ff6c39;
-      background-color: #ff6c39;
+      border-color: #00af98;
+      background-color: #00af98;
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
     }
 
     &:not(:disabled):not(:checked) + label:hover::before {
-      border-color: #f88358;
+      border-color: #00af98;
     }
 
     &:not(:disabled):active + label::before {
-      background-color: #ff6c39;
-      border-color: #ff6c39;
+      background-color: #00af98;
+      border-color: #00af98;
     }
 
     &:focus + label::before {
@@ -283,11 +283,11 @@ select {
     }
 
     &:focus:not(:checked) + label::before {
-      border-color: #ff6c39;
+      border-color: #00af98;
     }
 
     &:disabled + label::before {
-      background-color: #ff6c39;
+      background-color: #00af98;
     }
   }
 }
@@ -311,10 +311,10 @@ select {
 .swal2-popup .swal2-styled.swal2-confirm {
   border-radius: 50px !important;
   padding: 0.7rem 1.4rem !important;
-  background: #ff6c39 !important;
+  background: #00af98 !important;
 
   &:focus {
-    box-shadow: 0 0 0 3px rgba(248, 147, 80, 0.68);
+    box-shadow: 0 0 0 3px #00af98;
   }
 }
 
